@@ -1,27 +1,26 @@
 /*
- * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with
- * the License. You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on
- * an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the
- * specific language governing permissions and limitations under the License.
- *
  * Copyright 2012-2025 the original author or authors.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ * https://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
  */
 package org.assertj.tests.core.api.recursive.comparison.configuration;
 
-import static java.util.stream.Collectors.toList;
-import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.catchThrowable;
 import static org.assertj.core.api.BDDAssertions.then;
 import static org.assertj.core.internal.TypeComparators.defaultTypeComparators;
 import static org.assertj.tests.core.testkit.AlwaysEqualComparator.ALWAYS_EQUALS;
 
 import java.util.Comparator;
-import java.util.List;
-import java.util.Map.Entry;
 import java.util.function.BiPredicate;
 
 import org.assertj.core.api.recursive.comparison.RecursiveComparisonConfiguration;
@@ -45,8 +44,8 @@ class RecursiveComparisonConfiguration_comparatorByType_Test {
     // WHEN
     TypeComparators typeComparators = recursiveComparisonConfiguration.getTypeComparators();
     // THEN
-    List<Entry<Class<?>, Comparator<?>>> defaultComparators = defaultTypeComparators().comparatorByTypes().collect(toList());
-    assertThat(typeComparators.comparatorByTypes()).containsExactlyElementsOf(defaultComparators);
+    var defaultComparators = defaultTypeComparators().comparatorByTypes().toList();
+    then(typeComparators.comparatorByTypes()).containsExactlyElementsOf(defaultComparators);
   }
 
   @Test
@@ -57,9 +56,9 @@ class RecursiveComparisonConfiguration_comparatorByType_Test {
     recursiveComparisonConfiguration.registerEqualsForType((Tuple t1, Tuple t2) -> false, Tuple.class);
     recursiveComparisonConfiguration.registerComparatorForType(ALWAYS_EQUALS, Double.class);
     // THEN
-    assertThat(recursiveComparisonConfiguration.getComparatorForType(Integer.class)).isSameAs(integerComparator);
-    assertThat(recursiveComparisonConfiguration.getComparatorForType(Tuple.class)).isNotNull();
-    assertThat(recursiveComparisonConfiguration.getComparatorForType(Double.class)).isSameAs(ALWAYS_EQUALS);
+    then(recursiveComparisonConfiguration.getComparatorForDualType(Integer.class)).isSameAs(integerComparator);
+    then(recursiveComparisonConfiguration.getComparatorForDualType(Tuple.class)).isNotNull();
+    then(recursiveComparisonConfiguration.getComparatorForDualType(Double.class)).isSameAs(ALWAYS_EQUALS);
   }
 
   @Test
