@@ -1,22 +1,25 @@
 /*
- * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with
- * the License. You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on
- * an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the
- * specific language governing permissions and limitations under the License.
- *
  * Copyright 2012-2025 the original author or authors.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ * https://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
  */
 package org.assertj.tests.core.api.recursive.comparison.fields;
 
-import static java.util.stream.Collectors.toList;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.entry;
 import static org.assertj.core.api.BDDAssertions.then;
 import static org.assertj.core.internal.TypeComparators.defaultTypeComparators;
+import static org.assertj.core.util.DualClass.dualClass;
 import static org.assertj.tests.core.testkit.AlwaysDifferentComparator.alwaysDifferent;
 import static org.assertj.tests.core.testkit.AlwaysEqualComparator.ALWAYS_EQUALS_STRING;
 import static org.assertj.tests.core.testkit.AlwaysEqualComparator.ALWAYS_EQUALS_TIMESTAMP;
@@ -25,10 +28,7 @@ import static org.assertj.tests.core.testkit.BiPredicates.DOUBLE_EQUALS;
 import static org.assertj.tests.core.testkit.BiPredicates.STRING_EQUALS;
 
 import java.sql.Timestamp;
-import java.util.Comparator;
 import java.util.Date;
-import java.util.List;
-import java.util.Map.Entry;
 import java.util.UUID;
 import java.util.regex.Pattern;
 
@@ -49,7 +49,7 @@ class RecursiveComparisonAssert_fluent_API_Test extends WithComparingFieldsIntro
                                           .getRecursiveComparisonConfiguration();
     // THEN
     then(configuration.isInStrictTypeCheckingMode()).isFalse();
-    List<Entry<Class<?>, Comparator<?>>> defaultComparators = defaultTypeComparators().comparatorByTypes().collect(toList());
+    var defaultComparators = defaultTypeComparators().comparatorByTypes().toList();
     then(configuration.getTypeComparators().comparatorByTypes()).containsExactlyElementsOf(defaultComparators);
     then(configuration.comparatorByFields()).isEmpty();
     then(configuration.getIgnoreAllActualNullFields()).isFalse();
@@ -294,10 +294,10 @@ class RecursiveComparisonAssert_fluent_API_Test extends WithComparingFieldsIntro
                                                  .withEqualsForType((o1, o2) -> true, type3)
                                                  .getRecursiveComparisonConfiguration();
     // THEN
-    then(currentConfiguration.getTypeComparators().comparatorByTypes()).contains(entry(type1, ALWAYS_EQUALS_STRING),
-                                                                                 entry(type2, ALWAYS_EQUALS_TIMESTAMP));
-    then(currentConfiguration.getTypeComparators().comparatorByTypes()).anyMatch(entry -> entry.getKey().equals(type3)
-                                                                                          && entry.getValue() != null);
+    then(currentConfiguration.comparatorByTypes()).contains(entry(dualClass(type1, null), ALWAYS_EQUALS_STRING),
+                                                            entry(dualClass(type2, null), ALWAYS_EQUALS_TIMESTAMP))
+                                                  .anyMatch(entry -> entry.getKey().actual().equals(type3)
+                                                                     && entry.getValue() != null);
   }
 
   @Test
@@ -334,8 +334,8 @@ class RecursiveComparisonAssert_fluent_API_Test extends WithComparingFieldsIntro
                                                  .withEqualsForType((o1, o2) -> false, type2)
                                                  .getRecursiveComparisonConfiguration();
     // THEN
-    then(currentConfiguration.getComparatorForType(type1)).isSameAs(alwaysDifferentComparator);
-    then(currentConfiguration.getComparatorForType(type2)).isNotSameAs(alwaysEqualComparator);
+    then(currentConfiguration.getComparatorForDualType(type1)).isSameAs(alwaysDifferentComparator);
+    then(currentConfiguration.getComparatorForDualType(type2)).isNotSameAs(alwaysEqualComparator);
   }
 
 }
